--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <div id="slider">
 	   <div class="images">
-		<img src="images/slider/bg1.jpg" alt="Image slider 1" id="slider1">
-		<img src="images/slider/bg2.jpg" alt="Image slider 2" id="slider2">
+		<img src="Images/slider/bg1.jpg" alt="Image slider 1" id="slider1">
+		<img src="Images/slider/bg2.jpg" alt="Image slider 2" id="slider2">
 	   </div> 
    <div class="arrows">
 	<div class="a-left">
