--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="styles.css">
 <html>
-   <head>
-<script src="https://kit.fontawesome.com/f8a2746b4c.js" crossorigin="anonymous"></script>
-    <meta charset="utf-8" />   
-	
+ <head>
+  <script src="https://kit.fontawesome.com/f8a2746b4c.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+   <meta charset="utf-8" />   
     <title>WebAgency</title>
-   </head><!--******************** Menu ********************-->
+   </head>
+<!--******************** Menu ********************-->
 <body>
   
-
     <header>
       <div id="logo">
          <img src="Images/webagencylogo.png" alt="Logo de WebAgency" /> </div> 
