--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    <section id="services">
      <div class="services-text">
       <h1> NOS SERVICES </h1> 
-	 <div id="lineseparator"> 
+	 <div class="lineseparator"> 
        <p> <span class="fa-stack fa-2x">
 	<i class="fas fa-circle fa-stack-2x" style="color:white"></i>
   <i class="fas fa-circle fa-stack-1x"style="color:#5897D0"></i>
@@ -139,7 +139,7 @@
      <div class="portfolio-text">
        <h1> NOS PROJETS </h1>
 	    <!--separator: line + 2cercles***-->
-	  <div id="lineseparator"> 
+	  <div class="lineseparator"> 
        <p>
 	    <span class="fa-stack fa-2x">
 	    <i class="fas fa-circle fa-stack-2x" style="color:white"></i>
@@ -289,8 +289,6 @@
         </div>
 
 </section>
-
-
 
   <!--****************** Contact & Formulaire***********-->
    <section id="contact">
