--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
- <head>
-  <script src="https://kit.fontawesome.com/f8a2746b4c.js" crossorigin="anonymous"></script>
+<html lang="fr-FR">
+<head>
+  <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="styles.css">
-   <meta charset="utf-8" />   
-    <title>WebAgency</title>
-   </head>
+  <script src="https://kit.fontawesome.com/f8a2746b4c.js" crossorigin="anonymous"></script>
+  <title>WebAgency</title>
+ </head>
 <!--******************** Menu ********************-->
 <body>
     <header>
