--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <hr class="line">
       </div>
 	  
-	    <article>Vous avez besoin d’être présent sur Internet ? Nous sommes là pour vous ! <br> Du site vitrine au site e-commerce, nous vous apportons une solution sur-mesure et adaptée à chaque projet. <br> Nous vous accompagnons de A à Z pour garantir un résultat unique, à votre image.</article>		
+	    <article><h3>Vous avez besoin d’être présent sur Internet ? Nous sommes là pour vous ! <br> Du site vitrine au site e-commerce, nous vous apportons une solution sur-mesure et adaptée à chaque projet. <br> Nous vous accompagnons de A à Z pour garantir un résultat unique, à votre image</h3>.</article>		
       
     </div>
 	
@@ -151,7 +151,7 @@
       <hr class="line">
       </div>
 	
-	  <article>Chaque réalisation est unique parce que chaque client est spécial.<br> Retrouvez nos dernières réalisations: site Internet, e-boutique, logo, newsletter....</article>
+	  <article><h3>Chaque réalisation est unique parce que chaque client est spécial.<br> Retrouvez nos dernières réalisations: site Internet, e-boutique, logo, newsletter...</h3>.</article>
 	 
 	 <div class="button-block">
   
