--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr-FR">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="https://kit.fontawesome.com/f8a2746b4c.js" crossorigin="anonymous"></script>
   <title>WebAgency</title>
