--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   <div id="slider">
 	   <div class="images">
-		<img src="images/slider/bg1.jpg" alt="Image slider 1" id="slider1">
-		<img src="images/slider/bg2.jpg" alt="Image slider 2" id="slider2">
+		<img src="Images/slider/bg1.jpg" alt="Image slider 1" id="slider1">
+		<img src="Images/slider/bg2.jpg" alt="Image slider 2" id="slider2">
 	   </div> 
    <div class="arrows">
 	<div class="a-left">
@@ -133,14 +133,6 @@
 	
 </div>	
 	
-        
-	
-	
-	
-	
-	
-	
-	
    </section>
 
 
@@ -177,7 +169,7 @@
 
  <div id="projets">
         <figure class="container">
-          <img src="images/projets/01.jpg" alt="boutique en ligne de déguisements-Déguise Toi"/>  
+          <img src="Images/projets/01.jpg" alt="boutique en ligne de déguisements-Déguise Toi"/>  
 		  
 		   <figcaption>
 		    <div class="title">Déguise Toi</div>
