--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  </head>
 
   
-   <!--******************** Menu ********************-->
+   <!--******************** Menu *******************-->
 <body>
   <header>
  <div id="logo">
